--- a/models.yml
+++ b/models.yml
@@ -3,6 +3,7 @@ LLM:
   - meta-llama/Llama-3.2-1B-Instruct
   - google/gemma-2-27b-it
   - mistralai/Mistral-7B-Instruct-v0.2
+  - mistralai/Mixtral-8x7B-Instruct-v0.1
 
 Embedding:
   - sentence-transformers/all-mpnet-base-v2
