--- a/models.yml
+++ b/models.yml
@@ -8,6 +8,5 @@ LLM:
 Embedding:
   - sentence-transformers/all-mpnet-base-v2
   - NovaSearch/stella_en_400M_v5
-  - Snowflake/snowflake-arctic-embed-m-v1.5
-  - Snowflake/snowflake-arctic-embed-l
   - Snowflake/snowflake-arctic-embed-m-long
+  - BAAI/bge-base-en-v1.5
